# hack-the-north-2024

./: .gitignore  README.md  package-lock.json  package.json  test.js
app/: page.tsx
backend/: .env  app.py  detector.py  location_command_main.py  location_interpreter.py  main.py  pyproject.toml  roomslist.py  sp_recog.py  test.py  voiceover.py
backend/constants/: valid_command_prefixes.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/public/: data.json
